--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -1458,6 +1458,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From these 3 models developed we can see the column that we can predict the most accurately is the Weather Description with 97%. This is then followed by the number of things watched (54%), the Month (24%), and then finally the day of the week (14%). However, I believe as to the reason the highest accuracy is with the Weather Description is because there are only 2 different categories the algorithm can predict. Meaning tat without any insight or training the algorith already has a 50 percent chance of selecting the right descriptor. This preception is then fortified when you look at how many options the other models are predciting. Fo instance, with the day of the the algorithm has a 1/7th chance of selecting the right option outright and then for predicting the month the algorithm has a 1/12th chance. Additionally, a reason as to why some have a higher accuracy than others is becuase, especially for the months, there is a much higher pattern or correlation between the months, weather, and then in turn the number of things watched compared to teh day of the week where the weather/seasons can change dramatically from week too week. Thus making it harder for the algorithm to predict accurately.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Developing the Decision Tree Classifier"
    ]
   },
@@ -1586,6 +1593,13 @@
     "y_predicted = tree_clf.predict(X_test)\n",
     "accuracy = accuracy_score(y_test, y_predicted)\n",
     "print(\"accuracy\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When using the same type of train test splits on this data for a decision tree instead of a knn model we see that for every single prediction the accuracy increased. Most notably the accuracy for the algorithm when predicting the Weather description went from 97% to 100% meaning that within our training set this model predictied the right y value every single time. Highlighting the fact that there is a big correlation between the weather data collected, and the number of things watched on a certain day. "
    ]
   }
  ],
