start ethics and conclusion

--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Average Number of Things Watched')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "Text(0.5, 1.0, 'Month vs. Average')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. # of Things Watched')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. Average # of Things Watched')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1322,12 +1322,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predicting Things Watched:"
+    "#### Predicting Things Watched:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1359,12 +1359,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predicitng Day of the Week:\n"
+    "#### Predicitng Day of the Week:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1392,12 +1392,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predicting Month:"
+    "#### Predicting Month:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1425,12 +1425,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predicitng Weather Description:"
+    "#### Predicitng Weather Description:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1600,6 +1600,13 @@
    "metadata": {},
    "source": [
     "When using the same type of train test splits on this data for a decision tree instead of a knn model we see that for every single prediction the accuracy increased. Most notably the accuracy for the algorithm when predicting the Weather description went from 97% to 100% meaning that within our training set this model predictied the right y value every single time. Highlighting the fact that there is a big correlation between the weather data collected, and the number of things watched on a certain day. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ethics and Conclusion"
    ]
   }
  ],
