--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -16,10 +16,11 @@
     "\n",
     "* I tend to watch more on the weekends\n",
     "* Watch more when the weather is good or bad\n",
+    "* Watch more on certain days or during certain months\n",
     "* Anything else I might find\n",
     "\n",
-    "To test this I will do a hypothesis test of the frequency of things watched on Saturdays and Sundays ( ie. my classification of the weekend) compared to how much I watched in the week (ie. Monday-Friday).\n",
-    "To add on I will develop a algorithm to predict how many things I watched when given an unseen instance.\n"
+    "To test this I will do a hypothesis test of the frequency and averages of things watched for each of these attributes.\n",
+    "To add on I will develop some classification models, more specifically KNN and a Decision Tree, to see if these models can predict certain attributes based on my data.\n"
    ]
   },
   {
@@ -35,6 +36,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Data before Cleaning\n",
+    "Weather API:\n",
+    "* date  \n",
+    "* tavg - average temperature \n",
+    "* tmin - minimum temperature\n",
+    "* tmax - maxiumum temperature\n",
+    "* prcp - Precipitation in Centimeters \n",
+    "* snow - Yes to snow or not\n",
+    "* wdir - Wind Direction\n",
+    "* wspd - Wind Speed  \n",
+    "* wpgt - Peak wind gust \n",
+    "* pres - Pressure\n",
+    "* tsun - Total time of Sun\n",
+    "\n",
+    "Netflix csv:\n",
+    "* Title of what was watched\n",
+    "* Date of when it was watched\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Code to import all of the data\n",
     "I will be using the APi that we previously used for DA4. Slightly modifying it so that the dates correspond to the Netflix Viewing history csv file.\n",
     "##### Importing the Weather\n",
@@ -43,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -179,24 +203,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Importing the days of the week:\n",
-    "Next we need to load in the days of the week from 2016-07-30 through to 2022-04-09.\n",
-    "To do this we are using the datetime library to create a series with the dates within this parameter and then the corresponding day of the week. This seires will then be added to the end of the weather dataframe that was created previously\n"
+    "##### Importing the days of the week and the month:\n",
+    "Next we need to load in the days of the week and the month from 2016-07-30 through to 2022-04-09.\n",
+    "To do this we are using the datetime library to create a series with the dates within this parameter and then the corresponding day of the week/month. This seires will then be added to the end of the weather dataframe that was created previously. \n",
+    "\n",
+    "We are doing this becuase I believe there might be a correlation between how much I watched and the day of the week or the month.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\georg\\AppData\\Local\\Temp/ipykernel_10728/3390690783.py:7: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  change_ser = pd.Series(list())\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -228,7 +246,7 @@
     "date_df[\"Month\"] = date_df['Date'].dt.month_name()\n",
     "# change to string so I can compare easily\n",
     "\n",
-    "change_ser = pd.Series(list())\n",
+    "change_ser = pd.Series(str(list()))\n",
     "\n",
     "for value in range(len(date_df[\"Date\"])):\n",
     "    temp = str(date_df[\"Date\"][value]).split(\" \")\n",
@@ -255,24 +273,18 @@
    "metadata": {},
    "source": [
     "#### Cleaning the Weather DataFrame\n",
-    "First we are going to clean the weather dataframe. We will be converting the temperatures to farenheit and then deleting the columns with more than 50 percent of the values missing. To add on, even after this cleaning there are still quite a few NAN values in the weather data collected due to the station having an error incollecting that value that day or just not recoridning it flat out. Since dropping each row with an NAN value would be almost half the data we have to interpolate those values as to make them as close or the same as the surrounding days as to not throw the data and so we dont have to delete almost half of the weather instances."
+    "First we are going to clean the weather dataframe. We will be converting the temperatures to farenheit and then deleting the columns with more than 50 percent of the values missing. To add on, even after this cleaning there are still quite a few NAN values in the weather data collected due to the station having an error in collecting that value that day or just not recording it flat out. Since dropping each row with an NAN value would be almost half the data we have to interpolate those values as to make them as close or the same as the surrounding days through interpolation as to not throw the data and so we dont have to delete almost half of the weather instances."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tavg\n",
-      "tmin\n",
-      "tmax\n",
-      "prcp\n",
-      "wspd\n",
-      "pres\n",
       "            index   tavg   tmin   tmax  prcp       wspd     pres\n",
       "Date                                                            \n",
       "2016-07-30      0  67.64  60.08  77.00   0.0  11.200000  1014.10\n",
@@ -313,18 +325,16 @@
     "    avg_temp_ser[value] = utils.convert_temp(avg_temp_ser[value])\n",
     "    min_temp_ser[value] = utils.convert_temp(min_temp_ser[value])\n",
     "    max_temp_ser[value] = utils.convert_temp(max_temp_ser[value])\n",
+    "# interpolating\n",
     "for col in weather_df.columns:\n",
     "    temp_ser = weather_df[col].copy()\n",
     "    if(temp_ser.isna().sum() > 1):\n",
-    "        print(col)\n",
     "        temp_ser.interpolate(inplace = True)\n",
     "        weather_df[col] = temp_ser\n",
     "weather_df[\"tavg\"] = avg_temp_ser\n",
     "weather_df[\"tmin\"] = min_temp_ser\n",
     "weather_df[\"tmax\"] = max_temp_ser\n",
     "weather_df = weather_df.rename({\"date\": \"Date\"}, axis = \"columns\")\n",
-    "\n",
-    "# interpolating \n",
     "\n",
     "weather_df.set_index(\"Date\", inplace=True)\n",
     "print(weather_df)\n",
@@ -336,14 +346,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cleaning the Date Column of the Netflix Dataframe\n",
-    "This will be converting the dates in this colunn from the format `4/9/22` to `2022-04-09`.\n",
-    "This will allow us the combine the other two data sets easily since they are both in this format."
+    "#### Importing and Cleaning Netflix Data\n",
+    "Since the only piece of data we are using from this file is the dat of which something was watched we only need to clean that column. To do this we will be converting the dates in this colunn from the format `4/9/22` to `2022-04-09` to match the date format in the weather data\n",
+    "This will allow us the combine the other two data sets easily on date since they are both in this format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -445,12 +455,12 @@
    "metadata": {},
    "source": [
     "#### Counting the number of things watched per day\n",
-    "After counting the amount of things watched for each day we can then merge it with the previously merged data to see all the data combined to one dataframe. This will also make analyzing this data much easier"
+    "Since there are occassionly one or more dates used in the Netflix Dataframe (This is due to sometimes there being more than 1 thing watched in a certain day) we need to count the number of things watched for each date then add it to the end of the combinged dataframe that we have so far. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +663,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -698,12 +708,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day Means Visualization"
+    "### Day Means Visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +722,7 @@
        "Text(0.5, 1.0, 'Days of the Week vs. Average Number of Things Watched')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +773,7 @@
        "Text(0.5, 1.0, 'Weekend or Weekday vs. Number of Things Watched')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -816,12 +826,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing the Months and things watched"
+    "### Visualizing the Months and Things Watched"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +840,7 @@
        "Text(0.5, 1.0, 'Month vs. Average')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -893,13 +903,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing Things Watched per day based on Weather Descriptions\n",
+    "Here we can see that during the month of Augutst I tend to watch a lot more often than I do during any other month. I believ this is due to the fact that during that time I am usually off school, meaning that I have less responsibilities causing me to watch more on Netflix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing Things Watched per day based on Weather Descriptions\n",
     "This will allow us to see if there is a corelation between the weather for the day and the number of things watched."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +925,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. # of Things Watched')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -941,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +967,7 @@
        "Text(0.5, 1.0, 'Description of the Weather vs. Average # of Things Watched')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1030,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From these 3 models developed we can see the column that we can predict the most accurately is the Weather Description with 97%. This is then followed by the number of things watched (54%), the Month (24%), and then finally the day of the week (14%). However, I believe as to the reason the highest accuracy is with the Weather Description is because there are only 2 different categories the algorithm can predict. Meaning tat without any insight or training the algorith already has a 50 percent chance of selecting the right descriptor. This preception is then fortified when you look at how many options the other models are predciting. Fo instance, with the day of the the algorithm has a 1/7th chance of selecting the right option outright and then for predicting the month the algorithm has a 1/12th chance. Additionally, a reason as to why some have a higher accuracy than others is becuase, especially for the months, there is a much higher pattern or correlation between the months, weather, and then in turn the number of things watched compared to teh day of the week where the weather/seasons can change dramatically from week too week. Thus making it harder for the algorithm to predict accurately.  "
+    "From these 3 models developed we can see the column that we can predict the most accurately is the Weather Description with 97%. This is then followed by the number of things watched (54%), the Month (24%), and then finally the day of the week (14%). However, I believe as to the reason the highest accuracy is with the Weather Description is because there are only 2 different categories the algorithm can predict. Meaning that without any insight or training the algorith already has a 50 percent chance of selecting the right descriptor. This preception is then fortified when you look at how many options the other models are predicting. For instance, with the day of the the algorithm has a 1/7th chance of selecting the right option outright and then for predicting the month the algorithm has a 1/12th chance. Additionally, a reason as to why some have a higher accuracy than others is because, especially for the months, there is a much higher pattern or correlation between the months, weather, and then in turn the number of things watched compared to the day of the week where the weather/seasons can change dramatically from week too week. Thus, making it harder for the algorithm to predict accurately.  "
    ]
   },
   {
@@ -1477,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1607,6 +1624,13 @@
    "metadata": {},
    "source": [
     "## Ethics and Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this Exploratory Data anlysis of my own Netflix data, the day of the week, the month, and the weather, of when something was watched we can see that there are definitely viewing habits based on these factors. Then, after the classification done we can see that algorithms/classification models can predict my habits decently well. Predicting most values within my fully combined dataset decently accurately. Highlighting the fact that my watching habits are quite predictable. Meaning that any data scientist that works with Netflix, who in turn has access to this data for every single user on the site, can predict and create algorithms to maximize a users watchtime based on them. For instance, a way in which they could pry and motivate a user like me to watch something on Netflix would be to send my account some kind of notification on days where I tend not to watch as much. For example, with my own data they could try and send more notifications during the week since I tend to watch more anyways on Saturdays. To add on, they could send notifications when it is a day classified in my location with bad weather to send a notification like, `Time to stay inside, bundle up, and binge your favorite shows `, tempting me, quite effectively, to open up the app and start watching anything and everything. "
    ]
   }
  ],
