--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -1376,7 +1376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Predicitng Day of the Week:\n"
+    "#### Predicting Day of the Week:\n"
    ]
   },
   {
