--- a/Netflix_Weather_Days.ipynb
+++ b/Netflix_Weather_Days.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis:\n",
-    "## Is there a corelation between the weather or the days of the week and how much I tend to watch on Netflix?"
+    "## Is there a correlation between the weather or the days of the week and how much I tend to watch on Netflix?"
    ]
   },
   {
